Fix left sidebar bottom
- some channels were out of view
- logged in username was overlapping with channel names

--- a/web/sass-files/sass/partials/_sidebar--left.scss
+++ b/web/sass-files/sass/partials/_sidebar--left.scss
@@ -25,7 +25,7 @@
     > div {
         height: 100%;
         position: absolute;
-        padding-bottom: 70px;
+        padding-bottom: 130px;
         width: 100%;
     }
     .badge {
